Added the about me page and updated the home page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <header>
             <nav>
-                <a class="btn" title="About Me" href="#">About Me</a>
+                <a class="btn" title="About Me" href="about_me.html">About Me</a>
                 <a class="btn" title="Skills" href="#">Skills</a>
                 <a class="btn" title="Projects" href="#">Projects</a>
                 <a class="btn" title="Contact Me" href="#">Contact Me</a>
@@ -25,9 +25,6 @@
                 <img src="/Images/LOGO Export.svg" width="40px" height="40px" alt="Evan Meehan Logo">
             </a>
         
-            <div class="name">
-                <h1>Hi! My Name Is Evan Meehan</h1>
-            </div>
         </div>
 
         <div class="info">
@@ -35,12 +32,10 @@
                 <img src="/Images/player_idle.svg" widht="300" height="300px"  alt="Pixel image of man">
             </div>
             <div class="info-text">
-                <p>I am currently a Student Web Developer living in Australia. Welcome to my portfolio!
-                This is where I will keep all of my projects and where you will be able to contact me.
-                Click the button to learn more about me! :)</p>
+                <p>Hi! I’m Evan Meehan, a Student Web Developer based in Australia. Welcome to my portfolio, where you can explore all my projects and easily get in touch with me. Click the button to learn more about me! :)</p>
             </div>
             <div class="button-container">
-                <a href="#" class="abtme">Learn More About Me</a>
+                <a href="about_me.html" class="abtme">Learn More About Me</a>
             </div>
         </div>
         
