--- a/about_me.html
+++ b/about_me.html
@@ -12,8 +12,8 @@
         <header>
             <nav>
                 <img class="logo" src="Images/LOGO Export.svg" alt="Logo">
-                <a class="btn" title="About Me" href="index.html">Home</a>
-                <a class="btn" title="Skills" href="#">Skills</a>
+                <a class="btn" title="Home" href="index.html">Home</a>
+                <a class="btn" title="Skills" href="skills.html">Skills</a>
                 <a class="btn" title="Projects" href="#">Projects</a>
                 <a class="btn" title="Contact Me" href="#">Contact Me</a>
             </nav>
