--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <nav>
                 <a class="btn" title="About Me" href="about_me.html">About Me</a>
-                <a class="btn" title="Skills" href="#">Skills</a>
+                <a class="btn" title="Skills" href="skills.html">Skills</a>
                 <a class="btn" title="Projects" href="#">Projects</a>
                 <a class="btn" title="Contact Me" href="#">Contact Me</a>
             </nav>
