Fixed image issue on skills page and added some animations and footers

--- a/about_me.html
+++ b/about_me.html
@@ -83,5 +83,7 @@
             </div>
         </section>
 
-
+        <footer>
+            <p>&copy; Evan Meehan 2024</p>
+        </footer>
     </body>
