--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                 <a href="about_me.html" class="abtme">Learn More About Me</a>
             </div>
         </div>
-        
-        
     </div>
+
+    <footer>
+        <p>&copy; Evan Meehan 2024</p>
+    </footer>
 </body>
 </html>
