Finished Projects Page. Started individual project page

--- a/about_me.html
+++ b/about_me.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evan Meehan</title>
+    <title>About Me</title>
     <link rel="stylesheet" type="text/css" media="screen" href="about_me.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <img class="logo" src="Images/LOGO Export.svg" alt="Logo">
                 <a class="btn" title="Home" href="index.html">Home</a>
                 <a class="btn" title="Skills" href="skills.html">Skills</a>
-                <a class="btn" title="Projects" href="#">Projects</a>
+                <a class="btn" title="Projects" href="projects.html">Projects</a>
                 <a class="btn" title="Contact Me" href="#">Contact Me</a>
             </nav>
         </header>
