--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evan Meehan</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" media="screen" href="index.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
             <nav>
                 <a class="btn" title="About Me" href="about_me.html">About Me</a>
                 <a class="btn" title="Skills" href="skills.html">Skills</a>
-                <a class="btn" title="Projects" href="#">Projects</a>
+                <a class="btn" title="Projects" href="projects.html">Projects</a>
                 <a class="btn" title="Contact Me" href="#">Contact Me</a>
             </nav>
         </header>
