--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evan Meehan</title>
+    <title>Skills</title>
     <link rel="stylesheet" type="text/css" media="screen" href="skills.css">
 </head>
 
@@ -16,7 +16,7 @@
                 <img class="logo" src="Images/LOGO Export.svg" alt="Logo">
                 <a class="btn" title="Home" href="index.html">Home</a>
                 <a class="btn" title="About Me" href="/about_me.html">About Me</a>
-                <a class="btn" title="Projects" href="#">Projects</a>
+                <a class="btn" title="Projects" href="/projects.html">Projects</a>
                 <a class="btn" title="Contact Me" href="#">Contact Me</a>
             </nav>
         </header>
