--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -16,6 +16,37 @@
                 <a class="btn" title="About Me" href="about_me.html">About Me</a>
                 <a class="btn" title="Skills" href="skills.html">Skills</a>
                 <a class="btn" title="Projects" href="projects.html">Projects</a>
-                <a class="btn" title="Contact Me" href="#">Contact Me</a>
+                <a class="btn" title="Contact Me" href="contact.html">Contact Me</a>
             </nav>
         </header>
+
+        <section class="section-container">
+            <div class="text-container">
+                <h2 class="section-title1">My Portfolio Website</h2>
+                <p class="section-description">This portfolio showcases my journey in coding, highlighting the projects I've created and the skills I've honed along the way. Whether you're interested in my web development journey, creative endeavors, or just want to learn more about me, you'll find it all here. Dive in, explore my work, and feel free to reach out—I’m always excited to connect and collaborate!</p>
+            </div>
+            <a title="Image" href="index.html"><div class="rounded-rectangle1"></div></a>
+        </section>
+
+        <section class="section-container">
+            <div class="rounded-rectangle2"></div>
+            <div class="text-container">
+                <h2 class="section-title2">Behind the Scenes - Coding</h2>
+                <p class="section-description">This entire website is coded by me using HTML and CSS. Throughout this project I have learnt a lot of skills as this is the first website I have Ever designed and coded. CSS has been a tricky thing to learn, especially with using flebox and responsive design but I am excited to code more and learn how to become even better!</p>
+            </div>
+        </section>
+
+        <section class="section-container">
+            <div class="text-container">
+                <h2 class="section-title3">Behind the Scenes - Affinity Designer</h2>
+                <p class="section-description">I use affinity designer to draw my own illustrations. All of the headers within this website were drawn by me. I have only just started learning how to draw and I really, really enjoy it. I love being able to express thoughts, emotions and my creativity through art.</p>
+            </div>
+            <div class="rounded-rectangle3"></div>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; Evan Meehan</p>
+    </footer>
+</body>
+
