--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
                 <a class="btn" title="Home" href="index.html">Home</a>
                 <a class="btn" title="About Me" href="about_me.html">About Me</a>
                 <a class="btn" title="Skills" href="skills.html">Skills</a>
-                <a class="btn" title="Contact Me" href="#">Contact Me</a>
+                <a class="btn" title="Contact Me" href="contact.html">Contact Me</a>
             </nav>
         </header>
 
@@ -28,9 +28,10 @@
             <h2 class="section-title1">Portfolio Website</h2>
         </section>
         <section class="section-container">
-            <a title="Game" href="#"><div class="rounded-rectangle2"></div></a>
+            <a href="gamepage.html"><div class="rounded-rectangle2" title="In Development"></div></a>
             <h5 class="section-title2">My Life As A Coder</h5>
         </section>
+        <h2 class="dev">In Development!</h2>
 
     </div>
     
