--- a/about_me.html
+++ b/about_me.html
@@ -15,7 +15,7 @@
                 <a class="btn" title="Home" href="index.html">Home</a>
                 <a class="btn" title="Skills" href="skills.html">Skills</a>
                 <a class="btn" title="Projects" href="projects.html">Projects</a>
-                <a class="btn" title="Contact Me" href="#">Contact Me</a>
+                <a class="btn" title="Contact Me" href="contact.html">Contact Me</a>
             </nav>
         </header>
 
