--- a/skills.html
+++ b/skills.html
@@ -17,7 +17,7 @@
                 <a class="btn" title="Home" href="index.html">Home</a>
                 <a class="btn" title="About Me" href="/about_me.html">About Me</a>
                 <a class="btn" title="Projects" href="/projects.html">Projects</a>
-                <a class="btn" title="Contact Me" href="#">Contact Me</a>
+                <a class="btn" title="Contact Me" href="contact.html">Contact Me</a>
             </nav>
         </header>
 
